# playtorch

./: .eden-redirections  .gitignore  .swiftlint.yml  404.html  CNAME  CONTRIBUTING.md  README.md  build.gradle  index.html  opensearch.xml  package-lock.json  settings.gradle  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  tutorial_feedback.yml  use_case.yml
.github/workflows/: build-cli.yml  build-ios.yml  build-react-native-pytorch-core-android.yml  build-template-android.yml  build-template-ios.yml  deploy-website.yml  npm-publish-nightly.yml  npm-publish.yml
_src/api/: cli.md
app/: .buckconfig  .detoxrc.json  .eslintrc.js  .gitignore  App.tsx  README.md  app.json  babel.config.js  eas.json  index.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
blog/: atom.xml  rss.xml
community/: index.html
example/: index.html
expo/: index.html
faq/: index.html
flora/: index.html
markdown-page/: index.html
react-native-pytorch-core/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.plugin.js  package.json  react-native-playtorch.podspec  react-native-pytorch-core.podspec  tsconfig.build.json  tsconfig.json
react-native-pytorch-core/android/: CMakeLists.txt  build.gradle  gradle.properties
react-native-pytorch-core/android/src/androidTest/assets/: bert_qa_spec.json  body_tracking_spec.json  body_tracking_spec2.json  gpt2_spec.json  gpt2_spec_custompacker.json  image_to_tensor.json  speech_recognition.json
react-native-pytorch-core/android/src/androidTest/java/org/pytorch/: IValuePackerInstrumentedTest.java  TestAudio.java  TestAudioRecordImpl.java
react-native-pytorch-core/android/src/androidTest/java/org/pytorch/suite/: InstrumentedTestSuite.java
react-native-pytorch-core/android/src/main/: AndroidManifest.xml
react-native-pytorch-core/android/src/main/cpp/: OnLoad.cpp  cpp-adapter.cpp
react-native-pytorch-core/android/src/main/cpp/torchlive/media/: NativeJSRefBridge.cpp
react-native-pytorch-core/android/src/main/cpp/torchlive/media/audio/: Audio.cpp  Audio.h  JIAudio.cpp  JIAudio.h
react-native-pytorch-core/android/src/main/cpp/torchlive/media/image/: Image.cpp  Image.h  JIImage.cpp  JIImage.h
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/: PyTorchCorePackage.java
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/audio/: Audio.java  AudioDataSource.java  AudioModule.java  AudioRecordImpl.java  AudioUtils.java  IAudio.java  IAudioRecord.java
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/camera/: CameraManager.java  CameraModule.java  CameraView.java  CameraViewManager.java
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/canvas/: CanvasManager.java  CanvasRenderingContext2D.java  CanvasRenderingContext2DModule.java  CanvasView.java  CanvasViewManager.java  DrawingCanvasView.java  ImageData.java  ImageDataModule.java
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/image/: AbstractImage.java  BitmapImage.java  IImage.java  Image.java  ImageDataImage.java  ImageException.java  ImageModule.java  ImageProxyImage.java  ImageUtils.java
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/javascript/: JSContext.java
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/jsi/: PyTorchCoreJSIModule.java  PyTorchCoreJSIModulePackage.java
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/media/: BlobUtils.java  MediaUtils.java
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/ml/: MobileModelModule.java  ModelLoaderModule.java
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/ml/processing/: BaseIValuePacker.java  BertTokenizer.java  CameraImageCenterCropScaleRgbNormTransform.java  CenterCropTransform.java  GPT2Tokenizer.java  GreyScaleNormTransform.java  IAudioToTensorTransform.java  IIValuePacker.java  IImageToTensorTransform.java  IImageTransform.java  IValuePackerImpl.java  Packer.java  PackerContext.java  PackerRegistry.java  RgbNormTransform.java  ScaleTransform.java  Unpacker.java
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/ml/processing/packer/: ScalarBoolPacker.java  ScalarDoublePacker.java  ScalarLongPacker.java  TensorFromAudioPacker.java  TensorFromImagePacker.java  TensorFromStringPacker.java  TensorPacker.java  TuplePacker.java
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/ml/processing/unpacker/: ArgmaxUnpacker.java  BertDecodeQAAnswerUnpacker.java  BoundingBoxesUnpacker.java  DictStringKeyUnpacker.java  ListUnpacker.java  ScalarBoolUnpacker.java  ScalarFloatUnpacker.java  ScalarLongUnpacker.java  StringUnpacker.java  TensorToImageUnpacker.java  TensorToStringUnpacker.java  TensorUnpacker.java  TupleUnpacker.java
react-native-pytorch-core/android/src/main/java/org/pytorch/rn/core/utils/: FileUtils.java  ModelUtils.java
react-native-pytorch-core/android/src/main/res/drawable/: camera_button.xml  ic_baseline_flip_camera_ios_24.xml
react-native-pytorch-core/android/src/main/res/layout/: activity_camera.xml
react-native-pytorch-core/android/src/main/res/values/: dimens.xml
react-native-pytorch-core/cxx/test/: AsyncTaskTests.cpp  CMakeLists.txt  ConverterTests.cpp  MediaTests.cpp  TensorTests.cpp  TorchTests.cpp  TorchliveTestBase.h  TorchliveTests.cpp  TorchvisionTest.cpp  VisionTests.cpp
react-native-template-ptl/: package.json  template.config.js
react-native-template-ptl-slim/: package.json
react-native-template-pytorch-live/: package.json  script.js  template.config.js
search/: index.html
snack/: index.html
third-party-notices-android/: index.html
third-party-notices-ios/: index.html
torchlive-cli/: .eslintrc.js  .gitignore  .prettierrc.js  README.md  package.json  tsconfig.json
tutorials/: index.html
video/: demo.webm  install.webm
website/: .eslintrc  .gitignore  README.md  babel.config.js  docusaurus.config.js  package.json  sidebars.js  vercel.json  versions.json
(+6754 files in other folders)
